--- a/.github/workflows/azbank.yml
+++ b/.github/workflows/azbank.yml
@@ -69,8 +69,8 @@ jobs:
           context: ./services/accounts
           push: true
           tags: |
-            ${{ env.ECR_REGISTRY }}/az/azbank:latest
-            ${{ env.ECR_REGISTRY }}/az/azbank:${{ github.sha }}
+            ${{ env.ECR_REGISTRY }}/az/accounts:latest
+            ${{ env.ECR_REGISTRY }}/az/accounts:${{ github.sha }}
 
       # 8️⃣ Build & push FastAPI image
       - name: Build and push FastAPI (payments) image
@@ -79,5 +79,5 @@ jobs:
           context: ./payments
           push: true
           tags: |
-            ${{ env.ECR_REGISTRY }}/bank-payments:latest
-            ${{ env.ECR_REGISTRY }}/bank-payments:${{ github.sha }}
+            ${{ env.ECR_REGISTRY }}/az/payments:latest
+            ${{ env.ECR_REGISTRY }}/az/payments:${{ github.sha }}
